Fix RS1036 warning

--- a/Catglobe.ResXFileCodeGenerator/Catglobe.ResXFileCodeGenerator.csproj
+++ b/Catglobe.ResXFileCodeGenerator/Catglobe.ResXFileCodeGenerator.csproj
@@ -19,6 +19,7 @@
     <RepositoryCommit>frombuild</RepositoryCommit>
     <ImplicitUsings>enable</ImplicitUsings>
 	  <IsRoslynComponent>true</IsRoslynComponent>
+		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
 
   <ItemGroup>
