--- a/.github/workflows/add-issue-to-project.yaml
+++ b/.github/workflows/add-issue-to-project.yaml
@@ -24,5 +24,5 @@ jobs:
           PROJECT_ID: 3
           ISSUE_ID: ${{ github.event.issue.number }}
         run: |
-          gh project item-add $PROJECT_ID --owner Catglobe --url https://github.com/$GITHUB_REPOSITORY/issues/$ISSUE_ID
+          gh project item-add $PROJECT_ID --owner ihonliu --url https://github.com/$GITHUB_REPOSITORY/issues/$ISSUE_ID
 
